product page dynamic

--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class="product">
     <header>
       <h1>WebShop</h1>
       <nav>
@@ -36,7 +36,7 @@
         <section class="purchaseBox">
           <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
           <p>Nike | Tshirts</p>
-          <p>price:</p>
+          <p class="price">price:</p>
           <form>
             <label
               >Choose a size
@@ -53,14 +53,16 @@
         <section class="info">
           <h3>Product Information</h3>
           <dl>
-            <dt>Model name</dt>
-            <dd>Sahara Team India Fanwear Round Neck Jersey</dd>
-            <dt>Color</dt>
-            <dd>Blue</dd>
-            <dt>Inventory number</dt>
-            <dd>1163</dd>
+            <dt>Model name:</dt>
+            <dd class="modelname">
+              Sahara Team India Fanwear Round Neck Jersey
+            </dd>
+            <dt>Color:</dt>
+            <dd class="color">Blue</dd>
+            <dt>Inventory number:</dt>
+            <dd class="number">1163</dd>
           </dl>
-          <h3>Nike</h3>
+          <h3 class="brand">Nike</h3>
           <p>Nike, creating experiences for today’s athlete</p>
         </section>
       </div>
