--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   </head>
   <body>
     <header>
+      <h1>This is a main page</h1>
       <nav>
-        <a href="category.html"></a>
-        <a href="productlist.html"></a>
-        <a href="product.html"></a>
+        <ul>
+          <li><a href="category.html">Categories</a></li>
+          <li><a href="productlist.html">Product list</a></li>
+          <li><a href="product.html">Product page</a></li>
+        </ul>
       </nav>
     </header>
   </body>
